test/files/neg/t5946.check
t5946.scala:6: error: No TypeTag available for Int
  Ops(scala.reflect.runtime.universe).op[Int]
                                        ^
one error found
